@@ -1,7 +1,7 @@
 /*
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
  *
- * Copyright (c) 1997-2010 Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 1997-2013 Oracle and/or its affiliates. All rights reserved.
  *
  * The contents of this file are subject to the terms of either the GNU
  * General Public License Version 2 only ("GPL") or the Common Development
@@ -122,6 +122,13 @@ public class IMAPNestedMessage extends IMAPMessage {
      */
     protected int getFetchBlockSize() {
 	return msg.getFetchBlockSize();
+    }
+
+    /*
+     * Get the enclosing message's ignoreBodyStructureSize. 
+     */
+    protected boolean ignoreBodyStructureSize() {
+	return msg.ignoreBodyStructureSize();
     }
 
     /*
